# pico-dht-openhab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dht.c  dht.h  dht.pio  lwipopts.h  main.c  my_mqtt.c  my_mqtt.h  wifi.c  wifi.h
openhab/: metadata_humidity_state.txt  metadata_temp_state.txt  metadata_temp_unit.txt  page_overview.txt  thing_mosquitto.txt  thing_pico.txt
